RESOLVED FIXED101679
Plugin diagnostic logging should send plugin file basename instead of MIME type.
https://bugs.webkit.org/show_bug.cgi?id=101679
Summary Plugin diagnostic logging should send plugin file basename instead of MIME type.
Jer Noble
Reported 2012-11-08 18:08:56 PST
Plugin diagnostic logging should send plugin file basename instead of MIME type.
Attachments
Patch (4.99 KB, patch)
2012-11-08 18:15 PST, Jer Noble
no flags
Jer Noble
Comment 1 2012-11-08 18:11:08 PST
Jer Noble
Comment 2 2012-11-08 18:15:15 PST
WebKit Review Bot
Comment 3 2012-11-09 10:16:37 PST
Comment on attachment 173165 [details] Patch Clearing flags on attachment: 173165 Committed r134083: <http://trac.webkit.org/changeset/134083>
WebKit Review Bot
Comment 4 2012-11-09 10:16:40 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.