Plugin diagnostic logging should send plugin file basename instead of MIME type. https://bugs.webkit.org/show_bug.cgi?id=101679

Reviewed by Eric Carlson.

Log the basename of the plugin file rather than the mime type so as to more
accurately log which plugin was used to handle the request.

* loader/SubframeLoader.cpp:
(WebCore::logPluginRequest): Log the plugin 'file' field, if present.
* plugins/PluginData.cpp:
(WebCore::PluginData::pluginInfoForMimeType): Factored out from pluginNameForMimeType.
(WebCore::PluginData::pluginNameForMimeType): Use pluginInfoForMimeType to retrieve name field.
(WebCore::PluginData::pluginFileForMimeType): Use pluginInfoForMimeType to retrieve file field.
* plugins/PluginData.h:


Canonical link: https://commits.webkit.org/119866@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134083 268f45cc-cd09-0410-ab3c-d52691b4dbfc